[gd_scene load_steps=18 format=2]

[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 1.png" type="Texture" id=1]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 2.png" type="Texture" id=2]
[ext_resource path="res://source/assets/sprites/grass/trinity_site_level_layout-level_design_z-index_0_grass_type-2.png" type="Texture" id=3]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 10.png" type="Texture" id=4]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 5.png" type="Texture" id=5]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 6.png" type="Texture" id=6]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 4.png" type="Texture" id=7]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na.png" type="Texture" id=8]
[ext_resource path="res://source/assets/scripts/grass_handlers/grass_body.gd" type="Script" id=9]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 11.png" type="Texture" id=10]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 3.png" type="Texture" id=11]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 7.png" type="Texture" id=12]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 12.png" type="Texture" id=13]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 9.png" type="Texture" id=14]
[ext_resource path="res://source/assets/sprites/grass/idle/grass_type-0_frame_na – 8.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 504.69, 326.369 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 9 )

[node name="trinity_site_level_grass_type_2_animated" type="AnimatedSprite" parent="."]
position = Vector2( -3.36365, 0 )
frames = SubResource( 1 )
animation = "Idle"
frame = 11
playing = true

[node name="trinity_site_level_layout-level_design_z-index_0_grass_type-2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="grass_node" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -19.0488, 60.3212 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
